# pdf-translator

./: .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  build_windows_msys2.bat
PDFTranEngine/: build_linux.sh  build_windows.bat  main.py  requirements.txt
PDFTranView/: CMakeLists.txt  copy_if_exists.cmake  main.cpp  mainwindow.cpp  mainwindow.h  pdfdocument.cpp  pdfdocument.h  pdfview.cpp  pdfview.h
build_msys2/: .ninja_log  .ninja_log.restat
